# mivo

./: .gitignore  CMakeLists.txt  E-con discussion.md  Readme.md  install.md
Dev work/: Cropzoom.cpp  awb.cpp  camtest.cpp  color_temperature  gstreamer_app  image_capture.cpp  image_video_capture.cpp  imvi  ivideo  main.cpp  test  test.cpp  video_capture  video_capture.cpp  video_pipeline  zoom.cpp  zoomCrop.cpp
include/: KeyPad.h  MainWindow.h
src/: KeyPad.cpp  MainWindow.cpp  main.cpp  maina.c
